ny mand og nye citater

--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
         <div class="fade">
           <img src="image/mand1.jpg">
         </div>
-        <div class="text">"Jeg elsker at arbejde med lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod"</div>
+        <div class="text">“Grundfos fungerer som min vejleder, og med min konto hos dem kender de mine problemstillinger”</div>
       </div>
 
 
@@ -36,7 +36,7 @@
         <div class="fade">
           <img src="image/mand2.jpg">
         </div>
-        <div class="text">"Jeg elsker at arbejde med lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod"</div>
+        <div class="text">“Med en konto hos Grundfos er de informationer der er vigtige for mine kunder kun et klik væk”</div>
       </div>
 
 
@@ -44,7 +44,7 @@
         <div class="fade">
           <img src="image/mand3.jpg">
         </div>
-        <div class="text">"Jeg elsker at arbejde med lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod"</div>
+        <div class="text">“MyGrundfos er blevet en naturlig del af min arbejdsdag”</div>
       </div>
     </div>
 
