--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="">
+
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title></title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
-<p>hallo</p>
-   <script src="js/script.js"></script>
+  <div class="nudging-banner">
+    <p>Du har 7 dage til at verificere din konto </p>
+    <p><input type="submit" value="VERIFICER NU"></p>
+  </div>
+  <script src="js/script.js"></script>
 </body>
+
 </html>
