--- a/login.html
+++ b/login.html
@@ -112,10 +112,8 @@
 
 
   <script src="js/script.js"></script>
-
-
-
-
+  <script src="js/jquery-1.10.2.min.js"></script>
+  <script src="js/jquery.mobilePassword.js"></script>
 
 </body>
 
