--- a/index.html
+++ b/index.html
@@ -8,15 +8,40 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body id="bg">
+<body>
 
-<<<<<<< HEAD
-  <div class="nudging-banner">
+  <article class="nudging-banner">
+    <img src="image/nav-bar-img.jpg">
+    <section class="nudging-banner-text">
+      <h3>Opret en konto og få mere ud af Grundfos!</h3>
+
+      <p>Med udgangspunkt i dit fagområde, får du mulighed for <br>
+        at benytte relevante værktøjer og målrettet indhold såsom: </p>
+      <ul>
+        <li>MyGrundfos</li>
+        <li>Extranet </li>
+        <li>Værktøjer til pumpevalg</li>
+        <li>nstallationsvideoer</li>
+      </ul>
+      <section class="nudging-banner-btns">
+        <a href="login.html">
+          <button id="opret" class="btn">OPRET</button>
+        </a>
+        <a href="">
+          <button id="læs-mere" class="btn">LÆS MERE</button>
+        </a>
+      </section>
+    </section>
+    <div class="blue-overlay"></div>
+    <img src="image/nudging-banner-mand.jpg" class="nudging-img">
+  </article>
+
+  <section class="nudging-bar">
     <p>Du har 7 dage til at verificere din konto </p>
-    <p><input type="submit" value="VERIFICER NU"></p>
-  </div>
-=======
->>>>>>> 698565ae272c449f9b161decb9e07a573e4b7857
+    <a href="">
+      <button id="verificer" class="btn">VERIFICER NU </button>
+    </a>
+  </section>
   <script src="js/script.js"></script>
 </body>
 
