så er det måske lidt mere responsivt

--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 
 <body>
 
-<<<<<<< HEAD
   <article class="nudging-banner">
-    <img src="image/nav-bar-img.jpg">
+    <img src="image/nav-bar-img.jpg" class="nav-bar-img">
     <section class="nudging-banner-text">
       <h3>Opret en konto og få mere ud af Grundfos!</h3>
 
@@ -43,13 +42,6 @@
       <button id="verificer" class="btn">VERIFICER NU </button>
     </a>
   </section>
-=======
-  <div class="nudging-banner">
-    <p>Du har 7 dage til at verificere din konto </p>
-    <p><input type="submit" value="VERIFICER NU"></p>
-  </div>
-
->>>>>>> f9a261dfd42ca60d24cd7a1425df4337fa44151f
   <script src="js/script.js"></script>
 </body>
 
