Det virker ikke

--- a/login.html
+++ b/login.html
@@ -9,11 +9,11 @@
 </head>
 
 <body>
-    <!-- HEADER -->
+  <!-- HEADER -->
 
-     <div class="top-bar">
-        <img src="image/grundfos_logo_hvid.png" alt="Gundfos logo hvid" class="logo">
-    </div>
+  <div class="top-bar">
+    <img src="image/grundfos_logo_hvid.png" alt="Gundfos logo hvid" class="logo">
+  </div>
 
 
 
@@ -70,7 +70,7 @@
           <p><input type="efternavn" placeholder="Efternavn"></p>
         </div>
         <p><input type="email" placeholder="Email"></p>
-        <p><input type="password" placeholder="Password"></p>
+        <p><input type="password" placeholder="Password" class="mobilePassword"></p>
 
 
 
@@ -112,8 +112,6 @@
 
 
   <script src="js/script.js"></script>
-  <script src="js/jquery-1.10.2.min.js"></script>
-  <script src="js/jquery.mobilePassword.js"></script>
 
 </body>
 
