Øje der viser kode

--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Grundfos Login</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -70,7 +71,9 @@
           <p><input type="efternavn" placeholder="Efternavn"></p>
         </div>
         <p><input type="email" placeholder="Email"></p>
-        <p><input type="password" placeholder="Password" class="mobilePassword"></p>
+        <p><input class="active" type="password" placeholder="Password" id="pass">
+          <i id="icon" class="fa fa-eye-slash"></i>
+        </p>
 
 
 
