--- a/login.html
+++ b/login.html
@@ -9,11 +9,11 @@
 </head>
 
 <body>
-    <!-- HEADER -->
+  <!-- HEADER -->
 
-     <div class="top-bar">
-        <img src="image/grundfos_logo_hvid.png" alt="Gundfos logo hvid" class="logo">
-    </div>
+  <div class="top-bar">
+    <img src="image/grundfos_logo_hvid.png" alt="Gundfos logo hvid" class="logo">
+  </div>
 
 
 
@@ -103,7 +103,9 @@
             forskellige Grundfos-websider, -applikationer eller -værktøjer med henblik på at sende mig målrettet information. Jeg giver samtykke til behandling af de personoplysninger, jeg har givet ovenfor, samt oprettelse og brug af en profil til
             sådanne formål.</p>
         </div>
-        <p><input type="submit" value="Login"></p>
+        <a href="after-login.html">
+          <p><input type="submit" value="Login"></p>
+        </a>
         <p>Har du allerede en profil? Login <a href="">her</a></p>
 
       </form>
