--- a/login.html
+++ b/login.html
@@ -72,7 +72,7 @@
         </div>
         <p><input type="email" placeholder="Email"></p>
         <p><input class="active" type="password" placeholder="Password" id="pass">
-          <i id="icon" class="fa fa-eye-slash"></i>
+          <i id="eye" class="fa fa-eye-slash"></i>
         </p>
 
 
