--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="da">
 
 <head>
   <meta charset="utf-8">
@@ -9,7 +9,7 @@
 </head>
 
 <body id="bg">
- 
+
 
 
   <article class="nudging-banner">
