betingelser og sårn

--- a/login.html
+++ b/login.html
@@ -99,6 +99,10 @@
 
 
         <p><input type="firma" placeholder="Firma"></p>
+        <div class="betingelser">
+          <input type="checkbox" class="check-krav" name="check-krav" value="Bike">
+          <p class="check-krav-text">Accepter <a href="">Vilkår og betingelser.<a/></p>
+        </div>
         <div id="newpost">
           <input type="checkbox" class="check-krav" name="check-krav" value="Bike">
           <p class="check-krav-text">Ja, jeg ønsker at modtage målrettede oplysninger om nyheder, værktøjer, produkter, applikationer, arrangementer og kampagner fra Grundfos Holding A/S og Grundfos DK A/S (salgsselskab), Martin Bachs Vej 3, 8850,
