--- a/popup.html
+++ b/popup.html
@@ -10,14 +10,14 @@
   <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
 </head>
 
-<body id="bg">
+<body id="bgg">
 
 
  <button id="modalbtn" onclick="openModal()" class="button">Ret profil</button>
 
  <div id="simplemodal" class="modal">
     <div class="modal-content">
-       <span onclick="closeModal()" id="closebtn">&times;</span>
+       <span onclick="closeModal()" id="closebtn">Luk &times;</span>
        <div class=" col1">
        <h1>Hvorfor beder vi om dine oplysninger?</h1>
 
