--- a/popup.html
+++ b/popup.html
@@ -16,7 +16,7 @@
  <button id="modalbtn" onclick="openModal()" class="button">Ret profil</button>
 
  <div id="simplemodal" class="modal">
-    <div class="modal-content">
+    <div class="modal-content" id="modcontent">
        <span onclick="closeModal()" id="closebtn">Luk &times;</span>
        <div class=" col1">
        <h1>Hvorfor beder vi om dine oplysninger?</h1>
