--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
 
       <div class="mySlides">
         <div class="fade">
-          <img src="image/mand1.jpg">
+          <img src="image/mand1.jpg" alt="Mand">
         </div>
         <div class="text">“Grundfos fungerer som min vejleder, og med min konto hos dem kender de mine problemstillinger”</div>
       </div>
@@ -35,7 +35,7 @@
 
       <div class="mySlides">
         <div class="fade">
-          <img src="image/mand2.jpg">
+          <img src="image/mand2.jpg" alt="mand">
         </div>
         <div class="text">“Med en konto hos Grundfos er de informationer der er vigtige for mine kunder kun et klik væk”</div>
       </div>
@@ -43,7 +43,7 @@
 
       <div class="mySlides">
         <div class="fade">
-          <img src="image/mand3.jpg">
+          <img src="image/mand3.jpg" alt="mand">
         </div>
         <div class="text">“MyGrundfos er blevet en naturlig del af min arbejdsdag”</div>
       </div>
@@ -67,8 +67,8 @@
 
       <form class="login-container">
         <div class="navn-container">
-          <p><input type="fornavn" placeholder="Fornavn"></p>
-          <p><input type="efternavn" placeholder="Efternavn"></p>
+          <p><input type="text" placeholder="Fornavn"></p>
+          <p><input type="text" placeholder="Efternavn"></p>
         </div>
         <p><input type="email" placeholder="Email"></p>
         <p><input class="active" type="password" placeholder="Password" id="pass">
@@ -98,10 +98,10 @@
         </div>
 
 
-        <p><input type="firma" placeholder="Firma"></p>
+        <p><input type="text" placeholder="Firma"></p>
         <div class="betingelser">
           <input type="checkbox" class="check-krav" name="check-krav" value="Bike">
-          <p class="check-krav-text">Accepter <a href="">Vilkår og betingelser.<a/></p>
+          <p class="check-krav-text">Accepter <a href="">Vilkår og betingelser.</a></p>
         </div>
         <div id="newpost">
           <input type="checkbox" class="check-krav" name="check-krav" value="Bike">
