--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title></title>
+  <title>Grundfos</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -13,7 +13,7 @@
 
 
   <article class="nudging-banner">
-    <img src="image/nav-bar-img.jpg" class="nav-bar-img">
+    <img src="image/nav-bar-img.jpg" class="nav-bar-img" alt="Banner">
     <section class="nudging-banner-text">
       <h3>Opret en konto og få mere ud af Grundfos!</h3>
 
@@ -35,7 +35,7 @@
       </section>
     </section>
     <div class="blue-overlay"></div>
-    <img src="image/nudging-banner-mand.jpg" class="nudging-img">
+    <img src="image/nudging-banner-mand.jpg" class="nudging-img" alt="nudging">
   </article>
 
   <section class="nudging-bar">
