--- a/popup.html
+++ b/popup.html
@@ -12,9 +12,9 @@
 
 <body id="bgg">
 
-
+<div class="progressesbar">
  <button id="modalbtn" onclick="openModal()" class="button">Ret profil</button>
-
+</div>
  <div id="simplemodal" class="modal">
     <div class="modal-content" id="modcontent">
        <span onclick="closeModal()" id="closebtn">Luk &times;</span>
