--- a/login.html
+++ b/login.html
@@ -101,7 +101,8 @@
         <p><input type="firma" placeholder="Firma"></p>
         <div class="betingelser">
           <input type="checkbox" class="check-krav" name="check-krav" value="Bike">
-          <p class="check-krav-text">Accepter <a href="">Vilkår og betingelser.<a/></p>
+          <p class="check-krav-text">Accepter</p> <a href="">Vilkår og betingelser. </a>
+            
         </div>
         <div id="newpost">
           <input type="checkbox" class="check-krav" name="check-krav" value="Bike">
@@ -110,8 +111,8 @@
             forskellige Grundfos-websider, -applikationer eller -værktøjer med henblik på at sende mig målrettet information. Jeg giver samtykke til behandling af de personoplysninger, jeg har givet ovenfor, samt oprettelse og brug af en profil til
             sådanne formål.</p>
         </div>
-        <a href="popup.html">
-          <p><input type="submit" value="Login"></p>
+        <a class="tilpop" href="popup.html">
+          Log ind
         </a>
         <p>Har du allerede en profil? Login <a href="">her</a></p>
 
